--- a/style.css
+++ b/style.css
@@ -1,1 +1,7 @@
-# ss
+p{
+    color:bisque;
+    background-color: black;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-style: oblique;
+    background-size: 50px;
+}
