--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
-p{
-    color:bisque;
-    background-color: black;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-style: oblique;
-    background-size: 50px;
+
+.j{
+    color: green;
+    background-color: bisque;
+    margin: 20px;
 }
